navbar has white text

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,4 +1,8 @@
 .fullbar {
-    background-color: maroon;
-  }
-  
+  background-color: maroon;
+}
+
+.router-link-exact-active {
+  color: white;
+  text-align: left;
+}
