--- a/client/src/components/DrinkDetails/DrinkDetails.css
+++ b/client/src/components/DrinkDetails/DrinkDetails.css
@@ -1,15 +1,14 @@
 .drinkDetails {
   width: auto;
-  background-color: grey;
   padding: 30px;
   display: flex;
   flex-direction: column;
-  background-color: #a30707be;
+  /* background-color: #a30707be; */
   border-radius: 25px;
 }
 
 .drinkDetails img {
-  width: 250px;
+  max-width: 250px;
   display: flex;
   padding-bottom: 10px;
 }
