space between links and logbutton

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 #fullbar {
   background-color: maroon;
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  justify-content: space-between;
 }
