gitHub icon grey

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -27,18 +27,6 @@ a.social:hover {
   transform: translateY(-2px);
 }
 
-a.youtube {
-  color: #eb3223;
-}
-
-a.facebook {
-  color: #4968ad;
-}
-
-a.twitter {
-  color: #49a1eb;
-}
-
-a.instagram {
-  color: white;
+a.GitHub {
+  color: grey;
 }
