+ homepage img and links

--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -5,6 +5,13 @@
   padding: 0;
 }
 
+.ingredImg,
+.rouletteImg,
+.cocktailImg {
+  width: 125px;
+  height: 125px;
+}
+
 .ingredImg {
   width: 125px;
   height: 125px;
