--- a/client/src/components/DrinkDetails/DrinkDetails.css
+++ b/client/src/components/DrinkDetails/DrinkDetails.css
@@ -3,8 +3,7 @@
   padding: 30px;
   display: flex;
   flex-direction: column;
-  max-height: 400px;
-  /* background-color: #a30707be; */
+  height: auto;
   border-radius: 25px;
   background-color: maroon;
   margin-top: 30px;
